--- a/brick-breaker/index.html
+++ b/brick-breaker/index.html
@@ -1,9 +1,8 @@
 <html>
   <head>
-    <script type="text/javascript" src="../index.js"></script>
-    <script type="text/javascript" src="../webgl2d.js"></script>
   </head>
   <body>
-    <script type="module" src="main.js"></script>
+    <canvas id="webglcanvas" width="1000" height="1000"></canvas>
+    <script type="text/javascript" src="dist/main.js"></script>
   </body>
 </html>
